--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Recipes</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Recipes</h1>
+  <h1 class="title">Recipes</h1>
   <ul>
-    <li><a href="./pancakes.html">Buttermilk Pumpkin Pancakes</a></li>
-    <li><a href="./eggs.html">Ramen Scrambled Eggs</a></li>
-    <li><a href="./frenchtoast.html">PB&J Stuffed French Toast</a></li>
+    <li class="recipe-link"> <a href="./pancakes.html">Buttermilk Pumpkin Pancakes</a></li>
+    <li class="recipe-link"> <a href="./eggs.html">Ramen Scrambled Eggs</a></li>
+    <li class="recipe-link"> <a href="./frenchtoast.html">PB&J Stuffed French Toast</a></li>
   </ul>
 </body>
 </html>
