Add more styling

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   <h1 class="title">Recipes</h1>
-  <ul>
-    <li class="recipe-link"> <a href="./pancakes.html">Buttermilk Pumpkin Pancakes</a></li>
-    <li class="recipe-link"> <a href="./eggs.html">Ramen Scrambled Eggs</a></li>
-    <li class="recipe-link"> <a href="./frenchtoast.html">PB&J Stuffed French Toast</a></li>
-  </ul>
+  <div class="parent">
+    <ul>
+      <li class="recipe-link"> <a  class="link" href="./pancakes.html">Buttermilk Pumpkin Pancakes</a></li>
+      <li class="recipe-link"> <a class="link" href="./eggs.html">Ramen Scrambled Eggs</a></li>
+      <li class="recipe-link"> <a class="link" href="./frenchtoast.html">PB&J Stuffed French Toast</a></li>
+    </ul>
+  </div>
 </body>
 </html>
