--- a/pancakes.html
+++ b/pancakes.html
@@ -12,19 +12,21 @@
   <h2>Description</h2>
   <p>These buttermilk pumpkin pancakes are especially great for cold fall/winder mornings! Serve with syrup.</p>
   <h3>Ingredients</h3>
-  <ul>
-    <li>1 cup all-purpose flour</li>
-    <li>2 tablespoons white sugar</li>
-    <li>1 tablespoon pumpkin pie spice</li>
-    <li>1 teaspoon baking powerder</li>
-    <li>1 teaspoon baking soda</li>
-    <li>1/2 teaspoon salt</li>
-    <li>1 cup buttermilk</li>
-    <li>1/2 cup canned pumpkin</li>
-    <li>1/4 cup canola oil</li>
-    <li>2 large eggs</li>
-    <li>1 teaspoon vanilla extract</li>
-    <li>1 serving nonstick cooking spray</li>
-  </ul>
+  <div class="parent">
+    <ul>
+      <li>1 cup all-purpose flour</li>
+      <li>2 tablespoons white sugar</li>
+      <li>1 tablespoon pumpkin pie spice</li>
+      <li>1 teaspoon baking powerder</li>
+      <li>1 teaspoon baking soda</li>
+      <li>1/2 teaspoon salt</li>
+      <li>1 cup buttermilk</li>
+      <li>1/2 cup canned pumpkin</li>
+      <li>1/4 cup canola oil</li>
+      <li>2 large eggs</li>
+      <li>1 teaspoon vanilla extract</li>
+      <li>1 serving nonstick cooking spray</li>
+    </ul>
+  </div>
 </body>
 </html>
