--- a/eggs.html
+++ b/eggs.html
@@ -12,14 +12,16 @@
   <h2>Description</h2>
   <p>This ramen with egg recipe is great for a quick and easy breakfast! Add hot sauce at the end, if desired!</p>
   <h3>Ingredients</h3>
-  <ul>
-    <li>1 (3 ounce) package ramen noodles</li>
-    <li>1 teaspoon chopped fresh parsley, or to taste</li>
-    <li>1 tablespoon vegetable oil</li>
-    <li>1/2 onion, chopped</li>
-    <li>2 large eggs</li>
-    <li>1 teaspoon water, or as desired</li>
-    <li>1 pinch salt</li>
-  </ul>
+  <div class="parent">
+    <ul>
+      <li>1 (3 ounce) package ramen noodles</li>
+      <li>1 teaspoon chopped fresh parsley, or to taste</li>
+      <li>1 tablespoon vegetable oil</li>
+      <li>1/2 onion, chopped</li>
+      <li>2 large eggs</li>
+      <li>1 teaspoon water, or as desired</li>
+      <li>1 pinch salt</li>
+    </ul>
+  </div>
 </body>
 </html>
