--- a/frenchtoast.html
+++ b/frenchtoast.html
@@ -12,15 +12,17 @@
   <h2>Description</h2>
   <p>A mashup of two favorites: PB&J and French toast. Ready in a few minutes, this stuffed French toast is simply delicious, just like peanut butter and jelly.</p>
   <h3>Ingredients</h3>
-  <ul>
-    <li>8 thick slices brioche bread</li>
-    <li>1/4 cup peanut butter</li>
-    <li>1/4 cup jelly</li>
-    <li>3 large eggs</li>
-    <li>1/3 cup whole milk</li>
-    <li>1/2 teaspoon cinnamon</li>
-    <li>1/4 cup butter</li>
-    <li>1/2 tablespoon powdered sugar, or to taste</li>
-  </ul>
+  <div class="parent">
+    <ul>
+      <li>8 thick slices brioche bread</li>
+      <li>1/4 cup peanut butter</li>
+      <li>1/4 cup jelly</li>
+      <li>3 large eggs</li>
+      <li>1/3 cup whole milk</li>
+      <li>1/2 teaspoon cinnamon</li>
+      <li>1/4 cup butter</li>
+      <li>1/2 tablespoon powdered sugar, or to taste</li>
+    </ul>
+  </div>
 </body>
 </html>
